# image-recognition

./: .gitignore  CMakeLists.txt  README.md
cfg/: example.config.ini
include/io/: cml.h  colors.h  io_utils.h  log.h  normalize.h
include/network/: cpu.h  gpu.h  init.h  train.h
src/: main.cpp
src/io/: cml.cpp  io_utils.cpp  log.cpp  normalize.cpp
src/network/: cpu.cpp  cuda_errors.cu  gpu.cu  init.cpp  train.cpp
src/test/: atomic.cu  cuda_inspection.cu  matrix_mult.cpp  matrix_mult.cu
tmp/: README.md
